Added more recipies

--- a/recipies.yml
+++ b/recipies.yml
@@ -9,9 +9,50 @@ Korteletter i fad:
     Smashed tomato
     Cream
 
-something:
-    nothing
+Chicken burger:
+    Chicken
+    burger buns
+    tomato pure
+    Mayonaise
+    cucumber
     tomato
+    salad
+
+Cod 1:
+    Cod
+    potatoe
+
+Risengrød:
+    Rissoto rice
+    milk
+    butter
+    cinnamon
+
+Frikadeller:
+    Minced pork meat
+    onion
+    potatoe
+    flour
+    eggs
+    milk
+
+Boller i karry:
+    Minced pork meat
+    onion
+    garlic
+    breadcrumbs
+    egg
+    curry
+    cumin
+    yoghurt
     apple
-    Tuna
-    Pees
+    flour
+    boullon cube
+
+Forloren hare:
+    half minced pork
+    half minced cow
+    breadcrumbs
+    egg
+    cream
+    bacon
